load("@//bazel:shellutils.bzl", "bats_test", "shellcheck_test")
load("@//bazel/utils:diff_test.bzl", "diff_test")

sh_library(
    name = "gee-lib",
    srcs = ["gee"],
)

bats_test(
    name = "gee-bats",
    srcs = ["gee.bats"],
    deps = [":gee-lib"],
)

shellcheck_test(
    name = "gee-shellcheck_test",
    srcs = ["gee"],
)


genrule(
    name = "gee.md-gen",
    srcs = ["gee"],
    outs = ["actual-gee.md"],
    cmd_bash = "TERM=none /bin/bash $(location gee) help markdown >$@",
)

diff_test(
    name = "gee.md-diff_test",
    actual = "actual-gee.md",
    expected = "gee.md",
)
